--- a/settings.gradle
+++ b/settings.gradle
@@ -14,3 +14,7 @@ dependencyResolutionManagement {
 }
 rootProject.name = "ComposePOC"
 include ':app'
+include ':common'
+include ':domain'
+include ':data'
+include ':presentation'
