--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -28,6 +28,12 @@ android {
     kotlinOptions {
         jvmTarget = '17'
     }
+    buildFeatures {
+        compose true
+    }
+    composeOptions {
+        kotlinCompilerExtensionVersion '1.4.0'
+    }
 }
 
 dependencies {
